# pymap

./: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  README.rst  conftest.py  main.py  pyproject.toml
.github/workflows/: test.yml
data/assets/: style.css
data/assets/css/: style.css
data/boundary/: sample_boundary.json
data/config/: basemaps.json  flask_config.json
data/templates/: index.html
docs/sphinx/source/: conf.py  index.rst
pymap/: app.py  layers.py  logging_ext.py  main.py  map.py  read_files.py
tests/: basic_test.py  boundary_test.py  read_test.py
